Added CSS Style tag

--- a/contribution.html
+++ b/contribution.html
@@ -1,5 +1,12 @@
 <html>
     <head>
+        <style>
+            h2 {
+              font-size: 20px;
+            p {
+              font-size: 14px;
+            }
+            </style>
         <body>
             
         </body>
