Added background gradient

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <!--End of navbar  and slideshow-->    
 
 
-  <div>
+  <div id="grad1">
     <img src="images/thumb2.png" class="whoim">
     <div class="intro" style="margin-top:100px;">
         <p>
@@ -81,7 +81,18 @@
             </p>
     </div>
    
-</div>
+  </div>
+  <div id="grad1">
+    <img src="images/thumb3.png" class="whoim">
+    <div class="intro" style="margin-top:480px;">
+        <p>
+            As the web-platform of GrowTogether community, We connect all the people who holds hands <br> with  us globally. We recuirt new volunteers,
+            Sign-up new NGOs' and with the latest update, <br> we are happy reach precious job vacancies to the people who suffers from povert.
+            
+            </p>
+    </div>
+   
+  </div>
 
     
   
