--- a/contribution.html
+++ b/contribution.html
@@ -8,6 +8,12 @@
             }
             </style>
         <body>
+          <h1>Countries</h1>
+          <h2>China.</h2>
+          <p>China has aided in the reduction of world poverty by more than 70%.
+             Between 1981 and 2013, China raised a total of 850 million people out of poverty.
+              In China, the fraction of individuals living on less than $1.90 has decreased from 88 percent to less than 2% in 32 years.</p>
+          
             <h1>Business</h1>
             <h2>CROPLIFE INTERNATIONAL</h2>
             <p>CropLife International has trained over 4 million farmers in effective agricultural techniques since 2005, 
