--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grow Together</title>
-    <link rel="icon" href="among.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="images/icon.png" type="image/gif" size="16x16">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="slideshow.css">
 	<link rel="stylesheet" href="navbar.css">
@@ -13,7 +13,7 @@
 <body>
     <div class="topnav">
 		
-		<img src="images/Asset2.png" height=60px style="padding: 10px 10px 80px 10px" >
+		<img class="navimg"src="images/Asset2.png" >
 		<a href="about.html">ABOUT</a>
 		<a href="Contribution.html">CONTRIBUTION</a>
 		<a href="action.html">ACTION</a>
@@ -87,12 +87,16 @@
     <div class="intro" style="margin-top:480px;">
         <p>
             As the web-platform of GrowTogether community, We connect all the people who holds hands <br> with  us globally. We recuirt new volunteers,
-            Sign-up new NGOs' and with the latest update, <br> we are happy reach precious job vacancies to the people who suffers from povert.
+            Sign-up new NGOs' and with the latest update, <br> we are happy reach precious job vacancies to the people who suffers from poverty.
             
             </p>
     </div>
    
   </div>
+
+  <p>
+      sdghqwrkgn;qwrgnqwrjgoqwirgjqwjgnergqwlgqwrogh'   wlkdgnwlkrbnaflkgelknwognrw
+  </p>
 
     
   
