--- a/contribution.html
+++ b/contribution.html
@@ -13,6 +13,27 @@
           <p>China has aided in the reduction of world poverty by more than 70%.
              Between 1981 and 2013, China raised a total of 850 million people out of poverty.
               In China, the fraction of individuals living on less than $1.90 has decreased from 88 percent to less than 2% in 32 years.</p>
+
+              <h2>Brazil.</h2>
+              <p>Brazil has made significant progress in eliminating poverty and income disparities.
+                According to researchers, the Family Grant Program has considerably reduced income gap and poverty by ensuring that more children attend school. 
+                The Continuous Cash Benefit is a type of income transfer that is specifically designed for the elderly and disabled.</p>
+
+                <h2>Canada.</h2>
+                <p>In 2017, Canada's poverty-reduction programs aided over 2 million people.
+                  According to reports, Canada aims to eliminate poverty in half by 2030.
+                  The National Housing Strategy is a housing investment strategy that aims to assist the elderly, 
+                  persons fleeing domestic abuse, and Indigenous people.</p>
+
+                  <h2>United States.</h2>
+                  <p>Social Security could help reduce poverty among the elderly by 75 percent.
+                    The Earned Income Tax Credit is beneficial for families earning approximately 150 percent of the poverty line, 
+                    or approximately $25,100 for a four-person family. Food stamps and other programs have also helped to reduce deep poverty.</p>
+
+                    <h2>Denmark</h2>
+                    <p>Unemployed people, disabled people, and the elderly are among those who benefit from Denmark's social welfare system. 
+                      Denmark's citizens are typically healthy, with low infant mortality rates.
+                      Denmark likewise provides free public education, and the majority of its adult population is literate.</p>
           
             <h1>Business</h1>
             <h2>CROPLIFE INTERNATIONAL</h2>
