--- a/contribution.html
+++ b/contribution.html
@@ -34,8 +34,12 @@
                     <p>Unemployed people, disabled people, and the elderly are among those who benefit from Denmark's social welfare system. 
                       Denmark's citizens are typically healthy, with low infant mortality rates.
                       Denmark likewise provides free public education, and the majority of its adult population is literate.</p>
+
+                      <p><b>It is important to note that none of these countries are fully free of poverty, 
+                        but they do present some excellent examples of how governments might address the problem. 
+                        With the support of organizations like USAID, it's evident that this is a problem that many people are concerned about.</b></p>
           
-            <h1>Business</h1>
+                     <h1>Business</h1>
             <h2>CROPLIFE INTERNATIONAL</h2>
             <p>CropLife International has trained over 4 million farmers in effective agricultural techniques since 2005, 
               helping to enhance crop yields and revenue while reducing poverty.
