Added Image and volunteer sign up button

--- a/index.html
+++ b/index.html
@@ -94,11 +94,22 @@
    
   </div>
 
-  <p>
-      sdghqwrkgn;qwrgnqwrjgoqwirgjqwjgnergqwlgqwrogh'   wlkdgnwlkrbnaflkgelknwognrw
-  </p>
-
-    
+    <div>
+        <img src="images/vol.jpg" width="100%">
+        <div class="volhead">
+        
+        <h3>
+            Volunteering increases self-confidence.
+        </h3>
+        <p>
+            Volunteering can provide a healthy boost to your self-confidence, <br>self-esteem, and life satisfaction. You are doing good for others 
+            and the community, <br>which provides a natural sense of accomplishment. Your role as a volunteer <br> can also give you a sense of pride and 
+            identity.
+        </p>
+        <br>
+        <button class="signbutton">Sign Up</button>
+        </div>
+    </div>
   
 </body>
 </html>
