--- a/action.html
+++ b/action.html
@@ -39,9 +39,12 @@
 <br>
 
 <h1> <center> The Targets </center> </h1>
-<b> SDG INDICATOR 1.1.1 </b>
+
+<b> Target 1.1 </b>
 
 <p>  Eradicate extreme poverty  </p>
+
+<p> SDG INDICATOR 1.1.1 </p>
 
 <br>
 <p>Definition: Indicator 1.1.1 is the proportion of population below the international poverty line, by sex, age, employment status and geographical
@@ -77,7 +80,10 @@
 <br>
 <br>
 
-<b> SDG INDICATOR 1.2.1 </b>
+<b> Target 1.2 </b>
+<p><b> Reduce poverty by at least 50% </b></p>
+
+<p> SDG INDICATOR 1.2.1 </p>
 
 <p>  Halve population below national poverty line  </p>
 
@@ -104,12 +110,7 @@ areas</a>
 
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 <b>SDG INDICATOR 1.2.2 </b>
 
 <p>  Population in poverty according to national definitions </p>
@@ -140,8 +141,11 @@ lack of education, inadequate living standard, lack of income, disempowerment, p
 <br>
 <br>
 
-<b> SDG INDICATOR 1.3.1 </b>
+<b> Target 1.3 </b>
 
+<p> Population covered by social protection floors/systems </p>
+
+<p> SDG INDICATOR 1.3.1</p>
 <p> Population covered by social protection floors/systems </p>
 <br>
 
@@ -158,6 +162,44 @@ coverage of the poor and the vulnerable.</p>
 <br>
 <a href="https://ourworldindata.org/grapher/adequacy-of-social-safety-net-programs" target="_blank">Adequacy of social safety net programs</a> 
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<b> Target 1.4 </b>
+<p> <b> Equal rights to ownership, basic services, technology and economic resources</b></p>
+<p> SDG INDICATOR 1.4.1</p>
+<p>Access to basic services</p>
+
+Definition: Indicator 1.4.1 is the proportion of population living in households with access to basic services.
+
+Goal: By 2030 ensure that all men and women, in particular the poor and the vulnerable, have access to basic services. This sets a target of 
+universal access to basic services for all households.
+
+<br>
+More research: Further data and research can be found at the Our World in Data entries on <a href="https://ourworldindata.org/water-use-stress" target="_blank">Water Access, Consumption & Sanitation,</a> 
+
+<a href="https://ourworldindata.org/energy" target="_blank"> Energy Production & Changing Energy sources,</a> 
+
+<a href="https://ourworldindata.org/indoor-air-pollution" target="_blank"> Indoor Air Pollution.</a> 
+
+<br>
+<br>
+<br>
+<p>SDG INDICATOR 1.4.2</p>
+<p>Secure tenure rights to land</p>
+
+<br>
+<p>Definition: Indicator 1.4.2 is the proportion of total adult population with secure tenure rights to land, (a) with legally recognized documentation, and (b) 
+who perceive their rights to land as secure, by sex and type of tenure.</p>
+<br>
+Goal: By 2030 ensure that all men and women, in particular the poor and the vulnerable, have equal rights to economic resources, as well as access to basic services, 
+ownership and control over land and other forms of property.
 
       </body>
 
