--- a/contribution.html
+++ b/contribution.html
@@ -64,6 +64,51 @@
             }
             </style>
         <body>
+          <div class="row">
+            <div class="column">
+              <div class="card">
+                <img src="C:\Users\Dinthi - PC\Documents\GitHub\GrowTogether\Images\countries.jpg" alt="Countries" style="width:100%">
+                <div class="container">
+                  <h2>Countries</h2>
+                  <p class="title">Five Countries with the Best Poverty Reduction Programs.</p>
+                  <p>Poverty reduction programs are an important component of the anti-poverty effort. 
+              Countries must be able to work together and learn from each other.
+              </p>
+                  <p>These are the five countries having some of the strongest poverty-reduction programs, in no particular order. 
+              The list is prepared with the help of the U.N.</p>
+                  <p><button class="button">Read More</button></p>
+                </div>
+              </div>
+            </div>
+          
+            <div class="column">
+              <div class="card">
+                <img src="C:\Users\Dinthi - PC\Documents\GitHub\GrowTogether\Images\business.jpg" alt="Business" style="width:100%">
+                <div class="container">
+                  <h2>Business</h2>
+                  <p class="title">Business for 2030.</p>
+              <p>They try to cover these two target using their business.<p>
+                  <p>1.1) By 2030, Eradicate extreme poverty for all people everywhere, currenty measured as people living on less than $1.25 a day.<br/>
+              1.2) By 2030, Reduce at least by half the proportion of men, 
+              women and children of all ages living in poverty in all its dimensions according to national definition.</p>
+                  <p><button class="button">Read More</button></p>
+                </div>
+              </div>
+            </div>
+            
+            <div class="column">
+              <div class="card">
+                <img src="C:\Users\Dinthi - PC\Documents\GitHub\GrowTogether\Images\organizations.jpg" alt="Organizations" style="width:100%">
+                <div class="container">
+                  <h2>Organizations.</h2>
+                  <p class="title"></p>
+                  <p></p>
+                  <p></p>
+                  <p><button class="button">Read More</button></p>
+                </div>
+              </div>
+            </div>
+          </div>
           <h1>Countries</h1>
           <h2>China.</h2>
           <p>China has aided in the reduction of world poverty by more than 70%.
