--- a/action.html
+++ b/action.html
@@ -200,6 +200,65 @@ who perceive their rights to land as secure, by sex and type of tenure.</p>
 <br>
 Goal: By 2030 ensure that all men and women, in particular the poor and the vulnerable, have equal rights to economic resources, as well as access to basic services, 
 ownership and control over land and other forms of property.
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p><b>Target 1.5:<p>
+<p> Build resilience to environmental, economic and social disasters </p>
+<p> SDG INDICATOR 1.5.1 </p>
+<p>Deaths and affected persons from natural disasters</p>
+<br>
+<p> Definition: Indicator 1.5.1 is the number of deaths, missing persons and directly affected persons attributed to disasters.</p>
+
+<p><b>Goal:</b> By 2030 build the resilience of the poor and those in vulnerable situations and reduce their exposure and vulnerability to climate-related 
+extreme events and other environmental disasters.</p>
+
+
+<p>More research: Further data and research can be found at the Our World in Data entry on 
+<a href="https://ourworldindata.org/natural-disasters" target="_blank">Natural Catastrophes.</a> 
+</p>
+
+<p> Additional charts:</p><br>
+<a href="https://ourworldindata.org/grapher/total-affected-by-natural-disasters?country=~All+natural+disasters" target="_blank">Number affected by natural disasters</a> 
+<br>
+<br>
+
+<p>SDG INDICATOR 1.5.2</p>
+<p>Direct economic loss from natural disasters</p>
+
+<p>Definition: Indicator 1.5.2 is the direct economic loss attributed to disasters in relation to global gross domestic product (GDP).
+
+</p>
+<p><b> Goal:</b> By 2030 build the resilience of the poor and those in vulnerable situations and reduce their exposure and 
+vulnerability to climate-related extreme events and other environmental disasters.</p>
+
+<p>Additional charts:</p>
+<a href="https://ourworldindata.org/grapher/direct-disaster-economic-loss?tab=chart" target="_blank">Absolute economic losses from disasters by country</a> 
+<br>
+
+<a href="https://ourworldindata.org/grapher/weather-losses-share-gdp" target="_blank">Global weather-related disaster losses as a share of GDP</a> 
+<br>
+<br>
+
+<p>SDG INDICATOR 1.5.3 </p>
+<p>Disaster risk reduction strategies</p>
+
+<p>Definition: Indicator 1.5.3 is the number of countries that adopt and implement national disaster risk reduction strategies in line with the Sendai Framework 
+for Disaster Risk Reduction 2015–2030.</p>
+
+<p> <b>Goal:< /b> By 2030 build the resilience of the poor and those in vulnerable situations and reduce their exposure and vulnerability
+ to climate-related extreme events and other environmental disasters.</p>
+
+<p>More research: Further data and research can be found at the Our World in Data entry on
+<a href="https://ourworldindata.org/natural-disasters" target="_blank"> natural catastrophes.</a> 
+</p>
+
 
       </body>
 
