Added Organization section

--- a/contribution.html
+++ b/contribution.html
@@ -187,6 +187,23 @@
                       to assist mobile education, better business practices, and economic development. Between 2015 and 2017, 
                       the use of mobile technology resulted in a 17 percent rise in average monthly income among project participants. 
                       Along Colombia's coasts and rivers, the program has expanded to 13 traditional fishing communities.</p>
+
+                      <h1>Organizations</h1>
+                      <h2>Oxfam International</h2>
+                      <p>They raced against the clock in India to protect the most vulnerable from COVID-19.<br/>
+                        They worked tirelessly in Yemen to help those who were most affected.<br/>
+                        They assisted Palestinians in Gaza in rebuilding and recovering from the bloodshed.<br/>
+                        They assisted Palestinians in Gaza in rebuilding and recovering from the bloodshed.<br/>
+                        In Ethiopia, They collaborated with local organizations to provide critical assistance.<br/>
+                        They worked in Bangladesh to promote health and safety in refugee camps.<br/>
+                        They preserved females' schooling in South Sudan from the pandemic's effects.</br>
+                        They provided cash help and subsidies to start companies to families in Iraq.<br/>
+                        In Vanuatu, blockchain technology was used to transform humanitarian relief.<br/>
+                        They planted the seeds of climate resistance in the Philippines.<br/>
+                        They assisted farmers in Burkina Faso in growing food in a hot and dry area.<br/>
+                        They discovered labor exploitation in coffee farms in Brazil.<br/>
+                        They marched for climate justice in Glasgow and other cities around the world.</p>
+                      
         </body>
     </head>
 </html>
