--- a/action.html
+++ b/action.html
@@ -258,7 +258,40 @@ for Disaster Risk Reduction 2015–2030.</p>
 <p>More research: Further data and research can be found at the Our World in Data entry on
 <a href="https://ourworldindata.org/natural-disasters" target="_blank"> natural catastrophes.</a> 
 </p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p><b>Target 1.a :<p>
+<p> Mobilisation of resources to end poverty </p>
 
+<p>SDG INDICATOR 1.A.1</p>
+<p> Domestic resources to poverty reduction programmes </p>
+<p>Definition: Indicator 1.a.1 is the proportion of domestically generated resources allocated by the government directly to poverty reduction programmes.</p>
+
+<p>Goal: By 2030 Ensure significant mobilization of resources from a variety of sources to implement programmes and policies to end poverty in all its dimensions.</p>
+<br>
+<br>
+<p>SDG INDICATOR 1.A.2</p>
+<p>Government spending on essential services</p>
+
+<p>Definition: Indicator 1.a.2 is the proportion of total government spending on essential services (education, health and social protection).</p>
+<p>Goal: By 2030 Ensure significant mobilization of resources to implement programmes and policies to end poverty in all its dimensions.
+There is no defined target level of government spending for this indicator.</p>
+<br>
+<p>More research: Further data and research can be found at the Our World in Data entries on <a href=" https://ourworldindata.org/financing-healthcare" target="_blank">Financing Healthcare </a> and
+
+<a href="https://ourworldindata.org/government-spending " target="_blank"> Public Spending. </a> 
+<br>
+ <p> Additional charts:
+
+
+<a href="https://ourworldindata.org/grapher/social-spending-oecd-longrun " target="_blank">Social spending</a> 
 
       </body>
 
