--- a/action.html
+++ b/action.html
@@ -292,6 +292,22 @@ There is no defined target level of government spending for this indicator.</p>
 
 
 <a href="https://ourworldindata.org/grapher/social-spending-oecd-longrun " target="_blank">Social spending</a> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p><b>Target 1.B :<p>
+<p>Pro-poor public spending</p>
+
+<p> SDG INDICATOR 1.B.1 </p>
+<p>Definition: Indicator 1.B.1 is the Pro-poor public social spending. </p>
+<p>Goal: Create sound policy frameworks at the national, regional and international levels, based on pro-poor and gender-sensitive development strategies,
+ to support accelerated investment in poverty eradication actions.</p>
 
       </body>
 
