adding new images

--- a/volunteer.html
+++ b/volunteer.html
@@ -63,6 +63,7 @@
             Grow Together provides training and coaching to all of our advocates. <br>
             <b>Signup to volunteer.</b>
         </h4>
+        <img src="images/volcvr3.png" height="300">
     </div>
     <div>
         <p>
