Added navigation bar

--- a/donations.html
+++ b/donations.html
@@ -9,5 +9,14 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     <body>
+        <div class="topnav">
+            <img src="Images/Asset2.png" height=60px>
+            <a href="about.html">ABOUT</a>
+            <a href="Contribution.html">CONTRIBUTION</a>
+            <a href="action.html">ACTION</a>
+            <a class="active" href="donations.html">DONATE</a>
+            <a href="volunteer.html">VOLUNTEER</a>
+            <a href="index.html">HOME</a>
+        </div>
     </body>
 </html>
