Added slideshow images

--- a/donations.html
+++ b/donations.html
@@ -18,5 +18,10 @@
             <a href="volunteer.html">VOLUNTEER</a>
             <a href="index.html">HOME</a>
         </div>
+        <div class="slideshow-container; height:600px">
+            <img class="mySlides w3-animate-rignt" src="Images/01.jpg" style="width:100%">
+            <img class="mySlides w3-animate-right" src="Images/02.jpg" style="width:100%">
+            <img class="mySlides w3-animate-right" src="Images/03.jpg" style="width:100%">
+        </div>
     </body>
 </html>
