Added text and text boxes with images

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="slideshow.css">
 	<link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="donations.css">
 </head>
 <body>
     <div class="topnav">
 		
 		<img class="navimg"src="images/Asset2.png" >
-		<a href="about.html">ABOUT</a>
+		<a href="aboutus.html">ABOUT</a>
 		<a href="Contribution.html">CONTRIBUTION</a>
 		<a href="action.html">ACTION</a>
 		<a href="donations.html">DONATE</a>
@@ -110,6 +112,44 @@
         <button class="signbutton">Sign Up</button>
         </div>
     </div>
+
+    <center>
+      <h2 class="cont-headi">OUR SERVICES</h2>
+      <!-- <div class="para-cont"> -->
+          <p class="para001">As the web platform of the Grow Together Non-governmential organization. We do our best to 
+            end the Poverty from the world. In this web site we are focusing to collect world wide donations and gather more volunteers and
+            recuirt them. We are happy to report you the previous progress and We encourage other companies and organizations to reduce
+          poverty by our Awarding programme. </p>
+      <!-- </div> -->
   
+    </center>
+
+    <div class="card1-cont">
+      <div class="card1">
+          <img class="card1-img" src="Images/card01.png" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4 class="card1-title">OUR ACTIONS</h4> 
+            <p class="crd1-p">For poor women in Panama City, there are many obstacles to overcoming the cycle of poverty, but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem. </p> 
+          </div>
+      </div>
+
+      <div class="card1">
+          <img class="card1-img" src="Images/books-donation-box_16x9.jpg" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4 class="card1-title">CONTRIBUTORS</h4> 
+            <p class="crd1-p">Book Aid International is the UK’s leading international book donation and library development charity. Every year we give millions of people the opportunity to read by providing brand new books to thousands of libraries, schools, universities, refugee camps, hospitals and prisons worldwide. </p> 
+          </div>
+      </div>
+
+      <div class="card1">
+          <img class="card1-img" src="Images/crd.jpg" alt="Avatar" style="width:100%">
+          <div class="container">
+            <h4 class="card1-title">OUR TEAM</h4> 
+            <p class="crd1-p">We offer a hassle-free way of recycling and getting rid of unwanted clothing. Whether it’s your own clothes or old baby clothes, you don’t even need to leave the house as we’ll collect them for you! If you’re in need of a charity clothes collection from home, Collect My Clothes is on hand.</p> 
+          </div>
+      </div>
+  </div>
+  
+
 </body>
 </html>
