linked  pages to boxex

--- a/index.html
+++ b/index.html
@@ -124,32 +124,45 @@
   
     </center>
 
-    <div class="card1-cont">
+    <div class="card1-cont" href="action.html">
       <div class="card1">
-          <img class="card1-img" src="Images/card01.png" alt="Avatar" style="width:100%">
+        <a href="action.html">
+          <img class="card1-img" src="Images/card01.png" alt="Avatar" style="width:100%"> </a>
           <div class="container">
             <h4 class="card1-title">OUR ACTIONS</h4> 
-            <p class="crd1-p">For poor women in Panama City, there are many obstacles to overcoming the cycle of poverty, but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem. </p> 
+            <p class="crd1-p">For poor women in Panama City, there are many obstacles to overcoming the cycle of poverty, 
+              but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem.
+              but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem. </p>
+              <button class="button" onclick="document.location='action.html'">Read More</button> 
           </div>
       </div>
 
+
       <div class="card1">
-          <img class="card1-img" src="Images/books-donation-box_16x9.jpg" alt="Avatar" style="width:100%">
+        <a href="contribution.html">
+          <img class="card1-img" src="Images/books-donation-box_16x9.jpg" alt="Avatar" style="width:100%"> </a>
           <div class="container">
             <h4 class="card1-title">CONTRIBUTORS</h4> 
-            <p class="crd1-p">Book Aid International is the UK’s leading international book donation and library development charity. Every year we give millions of people the opportunity to read by providing brand new books to thousands of libraries, schools, universities, refugee camps, hospitals and prisons worldwide. </p> 
+            <p class="crd1-p">Book Aid International is the UK’s leading international book donation and library development 
+              charity. Every year we give millions of people the opportunity to read by providing brand new books to thousands of 
+              libraries, schools, universities, refugee camps, hospitals and prisons worldwide. </p> 
+              <button class="button" onclick="document.location='contribution.html'">Read More</button>
           </div>
       </div>
 
       <div class="card1">
-          <img class="card1-img" src="Images/crd.jpg" alt="Avatar" style="width:100%">
+        <a href="aboutus.html">
+          <img class="card1-img" src="Images/crd.jpg" alt="Avatar" style="width:100%"> </a>
           <div class="container">
             <h4 class="card1-title">OUR TEAM</h4> 
-            <p class="crd1-p">We offer a hassle-free way of recycling and getting rid of unwanted clothing. Whether it’s your own clothes or old baby clothes, you don’t even need to leave the house as we’ll collect them for you! If you’re in need of a charity clothes collection from home, Collect My Clothes is on hand.</p> 
+            <p class="crd1-p">We offer a hassle-free way of recycling and getting rid of unwanted clothing. 
+              Whether it’s your own clothes or old baby clothes, you don’t even need to leave the house as we’ll collect them 
+              for you! If you’re in need of a charity clothes collection from home, Collect My Clothes is on hand.</p> 
+              <button class="button" onclick="document.location='aboutus.html'">Read More</button>
           </div>
       </div>
   </div>
-  
+  <br>
 
 </body>
 </html>
