Fixed some issues

--- a/contribution.html
+++ b/contribution.html
@@ -57,17 +57,18 @@
 .button:hover {
   background-color: #555;
 }
-            h2 {
-              font-size: 20px;
-            p {
-              font-size: 14px;
-            }
-            </style>
+  h2 {
+  font-size: 20px;
+  }
+  p {
+  font-size: 14px;
+  }
+</style>
         <body>
           <div class="row">
             <div class="column">
               <div class="card">
-                <img src="C:\Users\Dinthi - PC\Documents\GitHub\GrowTogether\Images\countries.jpg" alt="Countries" style="width:100%">
+                <img src="Images/countries.jpg" alt="Countries" style="width:100%">
                 <div class="container">
                   <h2>Countries</h2>
                   <p class="title">Five Countries with the Best Poverty Reduction Programs.</p>
@@ -83,7 +84,7 @@
           
             <div class="column">
               <div class="card">
-                <img src="C:\Users\Dinthi - PC\Documents\GitHub\GrowTogether\Images\business.jpg" alt="Business" style="width:100%">
+                <img src="Images/business.jpg" alt="Business" style="width:100%">
                 <div class="container">
                   <h2>Business</h2>
                   <p class="title">Business for 2030.</p>
@@ -98,7 +99,7 @@
             
             <div class="column">
               <div class="card">
-                <img src="C:\Users\Dinthi - PC\Documents\GitHub\GrowTogether\Images\organizations.jpg" alt="Organizations" style="width:100%">
+                <img src="Images/organizations.jpg" alt="Organizations" style="width:100%">
                 <div class="container">
                   <h2>Organizations.</h2>
                   <p class="title"></p>
