--- a/action.html
+++ b/action.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
 
 <head>
 
 <title> ACTIONS </title>
 
-<link rel="stylesheet" href="actions.css">
+<link rel="stylesheet" href="action.css">
 </head>
 
 <body>
@@ -39,7 +40,7 @@
 <br>
 <br>
 
-<h1> <center> The Targets </center> </h1>
+<h2> <center> The Targets </center> </h2>
 
 <b> Target 1.1 </b>
 
