--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="topnav">
 		
-		<img class="navimg"src="images/Asset2.png" >
+		<img class="navimg"src="images/navimage.png" >
 		<a href="aboutus.html">ABOUT</a>
 		<a href="Contribution.html">CONTRIBUTION</a>
 		<a href="action.html">ACTION</a>
