--- a/donations.html
+++ b/donations.html
@@ -23,5 +23,16 @@
             <img class="mySlides w3-animate-right" src="Images/02.jpg" style="width:100%">
             <img class="mySlides w3-animate-right" src="Images/03.jpg" style="width:100%">
         </div>
+        <center>
+            <h2 class="cont-head">END POVERTY IN ALL ITS FORMS EVERYWHERE.</h2>
+            <!-- <div class="para-cont"> -->
+                <p class="para01">Globally, more than 800 million people are still living on less than $1.25 a day; many lack access to adequate food, clean drinking water and sanitation. Rapid economic growth in countries like China and India has lifted millions out of poverty, but progress has been uneven. Women are disproportionately affected; they are more likely to live in poverty due to unequal access to paid work, education and property.</p>
+            <!-- </div> -->
+
+            <h3 class="head3">Extreme poverty means living on less than
+                $1.25 a day.</h3>
+
+            <p class="para01">Progress has also been limited in other regions, such as South Asia and sub-Saharan Africa, which account for 80 percent of the people living in extreme poverty. This rate is expected to rise due to new threats brought on by climate change, conflict and food insecurity.</p>
+        </center>
     </body>
 </html>
