Added cards to content

--- a/donations.html
+++ b/donations.html
@@ -1,4 +1,5 @@
 <html>
+
     <head>
         <Title>Donations</Title>
         <link rel="icon" href="among1.png" type="image/gif" sizes="16x16">
@@ -8,7 +9,9 @@
         <link rel="stylesheet" href="donations.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
+
     <body>
+
         <div class="topnav">
             <img src="Images/Asset2.png" height=60px>
             <a href="about.html">ABOUT</a>
@@ -18,11 +21,13 @@
             <a href="volunteer.html">VOLUNTEER</a>
             <a href="index.html">HOME</a>
         </div>
+
         <div class="slideshow-container; height:600px">
             <img class="mySlides w3-animate-rignt" src="Images/01.jpg" style="width:100%">
             <img class="mySlides w3-animate-right" src="Images/02.jpg" style="width:100%">
             <img class="mySlides w3-animate-right" src="Images/03.jpg" style="width:100%">
         </div>
+
         <center>
             <h2 class="cont-head">END POVERTY IN ALL ITS FORMS EVERYWHERE.</h2>
             <!-- <div class="para-cont"> -->
@@ -34,5 +39,32 @@
 
             <p class="para01">Progress has also been limited in other regions, such as South Asia and sub-Saharan Africa, which account for 80 percent of the people living in extreme poverty. This rate is expected to rise due to new threats brought on by climate change, conflict and food insecurity.</p>
         </center>
+        
+        <div class="card-cont">
+            <div class="card">
+                <img class="card-img" src="Images/card01.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                  <h4 class="card-title">AWARENESS SESSIONS</h4> 
+                  <p class="crd-p">For poor women in Panama City, there are many obstacles to overcoming the cycle of poverty, but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem. </p> 
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img" src="Images/books-donation-box_16x9.jpg" alt="Avatar" style="width:100%">
+                <div class="container">
+                  <h4 class="card-title">BOOK DONATIONS</h4> 
+                  <p class="crd-p">Book Aid International is the UK’s leading international book donation and library development charity. Every year we give millions of people the opportunity to read by providing brand new books to thousands of libraries, schools, universities, refugee camps, hospitals and prisons worldwide. </p> 
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img" src="Images/crd.jpg" alt="Avatar" style="width:100%">
+                <div class="container">
+                  <h4 class="card-title">CLOTHES DONATIONS</h4> 
+                  <p class="crd-p">We offer a hassle-free way of recycling and getting rid of unwanted clothing. Whether it’s your own clothes or old baby clothes, you don’t even need to leave the house as we’ll collect them for you! If you’re in need of a charity clothes collection from home, Collect My Clothes is on hand.</p> 
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
