Added another heads to content

--- a/donations.html
+++ b/donations.html
@@ -39,7 +39,7 @@
 
             <p class="para01">Progress has also been limited in other regions, such as South Asia and sub-Saharan Africa, which account for 80 percent of the people living in extreme poverty. This rate is expected to rise due to new threats brought on by climate change, conflict and food insecurity.</p>
         </center>
-        
+
         <div class="card-cont">
             <div class="card">
                 <img class="card-img" src="Images/card01.png" alt="Avatar" style="width:100%">
@@ -66,5 +66,21 @@
             </div>
         </div>
 
+        <center>
+            <h2 class="cont-head2">HOW IT WORKS</h2>
+            <!-- <div class="para-cont"> -->
+                <p class="para01">The Globel Goals Donations will collect your unwanted items and ethically recycle them for free. What’s great is that you’ll be raising money for worthwhile causes in the process! Follow these steps and book your charity clothes collection from home today:</p>
+            <!-- </div> -->
+
+            <h3 class="head3">Bag up your unwanted clothing, Books and other Items</h3>
+            <p class="para02">We accept a range of clothes, shoes, bags and accessories. All items must be in a re-wearable condition. You can find out exactly what we accept </p>
+
+            <h3 class="head3">Request a donation collection</h3>
+            <p class="para02">Agree a date, time and location using our online form. We can collect from your home, workplace or other agreed location. Clothes can be left outside if they are safe and dry..</p>
+
+            <h3 class="head3">Your chosen charity will receive a donation</h3>
+            <p class="para02">Your chosen charity will receive a minimum of £200 per ton collected. All clothes will be ethically recycled or reused. Most will be sent abroad to provide affordable clothing to those in need.</p>
+        </center>
+        
     </body>
 </html>
