Update text settings

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <div id="grad1">
     <img src="images/thumb2.png" class="whoim">
-    <div class="intro" style="margin-top:100px;">
+    <div class="intro">
         <p>
             There are tons of people all around the world, suffering from poverty day by day.Therefore,<br> here is the unite of the Non-Government 
             Organizations, Volunteers and all the warm-hearted <br> people who raise hands to Grow Together."Grow Together" is the cloud-based platform
@@ -86,9 +86,9 @@
     </div>
    
   </div>
-  <div id="grad1">
-    <img src="images/thumb3.png" class="whoim">
-    <div class="intro" style="margin-top:480px;">
+  <div id="grad2">
+    <img src="images/thumb3.png" class="whoim2">
+    <div class="intro2">
         <p>
             As the web-platform of GrowTogether community, We connect all the people who holds hands <br> with  us globally. We recuirt new volunteers,
             Sign-up new NGOs' and with the latest update, <br> we are happy reach precious job vacancies to the people who suffers from poverty.
@@ -102,16 +102,16 @@
         <img src="images/vol.jpg" width="100%">
         <div class="volhead">
         
-        <h3>
+        <h2> 
             Volunteering increases self-confidence.
-        </h3>
-        <p>
+        </h2>
+        <p class="voltext" >
             Volunteering can provide a healthy boost to your self-confidence, <br>self-esteem, and life satisfaction. You are doing good for others 
             and the community, <br>which provides a natural sense of accomplishment. Your role as a volunteer <br> can also give you a sense of pride and 
             identity.
         </p>
         <br>
-        <button class="signbutton">Sign Up</button>
+        <button class="signbutton" onclick="document.location='volunteer.html'">Sign Up</button>
         </div>
     </div>
 
@@ -170,30 +170,34 @@
   <!--Footer starts here-->
   <footer>
     <div class="footer-content">
-        <h3>Foolish Developer</h3>
-        <p>Raj Template is a blog website where you will find great tutorials on web design and development. Here each tutorial is beautifully described step by step with the required source code.</p>
+        <h3 class="foottext">Gather With Grow Together</h3>
+        <p>There are tons of people all around the world, suffering from poverty day by day.Therefore,
+          here is the unite of the Non-Government Organizations, Volunteers and all the warm-hearted
+          people who raise hands to Grow Together."Grow Together" is the cloud-based platform of all
+          these people.</p>
         <ul class="socials">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+            <li><a href="www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="www.twitter.com"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="www.plus.google.lk"><i class="fa fa-google-plus"></i></a></li>
+            <li><a href="www.youtube.com"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="www.linkedin.microsoft.com"><i class="fa fa-linkedin-square"></i></a></li>
         </ul>
     </div>
     <div class="footer-bottom">
-        <p>copyright &copy; <a href="#">Foolish Developer</a>  </p>
+        <p>copyright &copy; <a href="#">GrowTogether</a>  </p>
                 <div class="footer-menu">
                   <ul class="f-menu">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Blog</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="action.html">Action</a></li>
+                    <li><a href="volunteer.html">Volunteer</a></li>
+                    <li><a href="donations.html">Donate</a></li>
+                    <li><a href="aboutus.html">Contact Us</a></li>
                   </ul>
                 </div>
     </div>
 
 </footer>
+<!--Footer ends here-->
 
-  <!--Footer ends here-->
 </body>
 </html>
