Added navbar to volunteer.html

--- a/volunteer.html
+++ b/volunteer.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Volunteer</title>
+    <link rel="icon" href="images/icon.png" type="image/gif" size="16x16">
+    <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="slideshow.css">
+	<link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="donations.css">
+  <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+    <div class="topnav">
+		
+		<img class="navimg"src="images/navimage.png" >
+		<a href="aboutus.html">ABOUT</a>
+		<a href="Contribution.html">CONTRIBUTION</a>
+		<a href="action.html">ACTION</a>
+		<a href="donations.html">DONATE</a>
+		<a class="active" href="volunteer.html">VOLUNTEER</a>
+		<a href="index.html">HOME</a>
+		
+	</div>
+
     <div>
     <H1>
         To reduce poverty, we need growth. <br> And to advance growth we need adequate And reliable energy.
