update css file
change anchor tags,colors

--- a/action.html
+++ b/action.html
@@ -5,6 +5,7 @@
 
 <title> ACTIONS </title>
 
+<!--link css file-->
 <link rel="stylesheet" href="action.css">
 </head>
 
@@ -14,7 +15,7 @@
 <h1> <center> <b> Take Actions to End Poverty </b> </center> </h1>
 
 <br>
-
+   <!--intro paragraph-->
 
 	<p> The fight against global poverty can be a discouraging one. The number of people suffering is hard to imagine.
 		While there is a multitude of poverty-stricken individuals, things are not entirely bleak.Poverty rates have been raising in recent years
@@ -42,10 +43,19 @@
 
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<h3> <center> The Targets </center> </h3>
 
-<h2> <center> The Targets </center> </h2>
+<br>
+<br>
+<br>
 
-
+<!--open div tag for targets named box . target titles are representing in a box-->
 	<div class="box-a">
 		<h2>Target 1.1  
 			<br><br>
@@ -128,7 +138,7 @@ areas</a>
 
 <br>
 <br>
-
+<br>
 <b>SDG INDICATOR 1.2.2 </b>
 
 <p>  Population in poverty according to national definitions </p>
@@ -178,8 +188,8 @@ newborns, work-injury victims and the poor and the vulnerable.</p>
 <p><b> Goal:</b> Implement nationally appropriate social protection systems and measures for all, including floors, and by 2030 achieve substantial 
 coverage of the poor and the vulnerable.</p>
 
+<b> Additional charts :</b>
 <br>
-<p><b> Additional charts :</b> </p>
 <a href="https://ourworldindata.org/grapher/adequacy-of-social-insurance-programs" target="_blank">Adequacy of social insurance systems</a> 
 <br>
 <a href="https://ourworldindata.org/grapher/adequacy-of-social-safety-net-programs" target="_blank">Adequacy of social safety net programs</a> 
