Added dots to slide show

--- a/donations.html
+++ b/donations.html
@@ -26,6 +26,11 @@
             <img class="mySlides w3-animate-rignt" src="Images/01.jpg" style="width:100%">
             <img class="mySlides w3-animate-right" src="Images/02.jpg" style="width:100%">
             <img class="mySlides w3-animate-right" src="Images/03.jpg" style="width:100%">
+            <div class="getfront" style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span> 
+                <span class="dot" onclick="currentSlide(2)"></span> 
+                <span class="dot" onclick="currentSlide(3)"></span> 
+            </div>
         </div>
 
         <center>
@@ -100,5 +105,5 @@
         </script>
 
     </body>
-    
+
 </html>
