--- a/donations.html
+++ b/donations.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="navbar.css">
         <link rel="stylesheet" href="donations.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="footer.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
