--- a/action.html
+++ b/action.html
@@ -2,8 +2,12 @@
 <html>
 
 <head>
-
+  
 <title> ACTIONS </title>
+
+<meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="icon" href="images/icon.png" type="image/gif" size="16x16">
   <link rel="stylesheet" href="style.css">
@@ -71,7 +75,7 @@
     }
     slides[slideIndex-1].style.display = "block";  
     dots[slideIndex-1].className += " active";
-    setTimeout(showSlides, 2000); // Change image every 2 seconds
+    setTimeout(showSlides, 3000); // Change image every 2 seconds
   }
         </script>
 
@@ -122,11 +126,11 @@
 <br>
 
 <!--open div tag for targets named box . target titles are representing in a box-->
-	<div class="box-a">
-		<h2>Target 1.1  
+	
+		<h2 class="cont-head">Target 1.1  
 			<br><br>
 		  Eradicate extreme poverty </h2>
-</div>
+
  
 
 
@@ -429,6 +433,7 @@ There is no defined target level of government spending for this indicator.</p>
 <p>Definition: Indicator 1.B.1 is the Pro-poor public social spending. </p>
 <p>Goal: Create sound policy frameworks at the national, regional and international levels, based on pro-poor and gender-sensitive development strategies,
  to support accelerated investment in poverty eradication actions.</p>
+
 
       </body>
 
