Added title icon and line break

--- a/donations.html
+++ b/donations.html
@@ -2,6 +2,7 @@
 
     <head>
         <Title>Donations</Title>
+        <link rel="icon" href="images/icon.png" type="image/gif" size="16x16">
         <link rel="icon" href="among1.png" type="image/gif" sizes="16x16">
         <link rel="stylesheet" href="stylesheetone.css">
         <link rel="stylesheet" href="slideshow.css">
@@ -105,6 +106,8 @@
               setTimeout(carousel, 2500);    
             }
         </script>
+
+        <br></br>
 
     <!--Footer starts here-->
     <footer>
