--- a/donations.html
+++ b/donations.html
@@ -16,7 +16,7 @@
     <body>
 
         <div class="topnav">
-            <img src="Images/Asset2.png" height=60px>
+            <img class="navimg"src="images/navimage.png">
             <a href="about.html">ABOUT</a>
             <a href="Contribution.html">CONTRIBUTION</a>
             <a href="action.html">ACTION</a>
