--- a/action.html
+++ b/action.html
@@ -433,7 +433,53 @@ There is no defined target level of government spending for this indicator.</p>
 <p>Definition: Indicator 1.B.1 is the Pro-poor public social spending. </p>
 <p>Goal: Create sound policy frameworks at the national, regional and international levels, based on pro-poor and gender-sensitive development strategies,
  to support accelerated investment in poverty eradication actions.</p>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
 
+ <!--Footer starts here-->
+ <footer>
+  <div class="footer-content">
+      <h3 class="foottext">Gather With Grow Together</h3>
+      <p>There are tons of people all around the world, suffering from poverty day by day.Therefore,
+        here is the unite of the Non-Government Organizations, Volunteers and all the warm-hearted
+        people who raise hands to Grow Together."Grow Together" is the cloud-based platform of all
+        these people.</p>
+      <ul class="socials">
+          <li><a href="www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="www.twitter.com"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="www.plus.google.lk"><i class="fa fa-google-plus"></i></a></li>
+          <li><a href="www.youtube.com"><i class="fa fa-youtube"></i></a></li>
+          <li><a href="www.linkedin.microsoft.com"><i class="fa fa-linkedin-square"></i></a></li>
+      </ul>
+  </div>
+  <div class="footer-bottom">
+      <p>copyright &copy; <a href="#">GrowTogether</a>  </p>
+              <div class="footer-menu">
+                <ul class="f-menu">
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="action.html">Action</a></li>
+                  <li><a href="volunteer.html">Volunteer</a></li>
+                  <li><a href="donations.html">Donate</a></li>
+                  <li><a href="aboutus.html">Contact Us</a></li>
+                </ul>
+              </div>
+  </div>
+
+</footer>
+<!--Footer ends here-->
 
       </body>
 
