--- a/action.html
+++ b/action.html
@@ -87,7 +87,7 @@
 <br>
    <!--intro paragraph-->
 
-	<p> The fight against global poverty can be a discouraging one. The number of people suffering is hard to imagine.
+	<p>  The fight against global poverty can be a discouraging one. The number of people suffering is hard to imagine.
 		While there is a multitude of poverty-stricken individuals, things are not entirely bleak.Poverty rates have been raising in recent years
 		because of the pandemic and many other reasons. 
 		the COVID-19 pandemic could increase global poverty by as much as half a billion people,  or 8% of the total human population. In April 2020,
@@ -125,8 +125,9 @@
 <br>
 <br>
 
-<!--open div tag for targets named box . target titles are representing in a box-->
+
 	
+
 		<h2 class="cont-head">Target 1.1  
 			<br><br>
 		  Eradicate extreme poverty </h2>
@@ -135,52 +136,54 @@
 
 
 
-
+<div class="para">
 <p> SDG INDICATOR 1.1.1 </p>
 
 <br>
 <p>Definition: Indicator 1.1.1 is the proportion of population below the international poverty line, by sex, age, employment status and geographical
- location (urban/rural).</p>
-<p>This poverty line is measured in "international dollars" which are a hypothetical currency that adjusts for price differences between countries 
+ location (urban/rural).
+This poverty line is measured in "international dollars" which are a hypothetical currency that adjusts for price differences between countries 
 (purchasing power parity) and it is measured in prices of 2011 to adjust for price changes over time (inflation).</p>
  
 <p><b>Goal - </b> By 2030 eradicate extreme poverty for all people everywhere, currently measured as people living on less than $1.90 a day.</p>
 
 <br>
 
-<b>More research: </b> Further data and research can be found at the Our World in Data entry on 
+<p><b>More research: </b> Further data and research can be found at the Our World in Data entry on 
 <a href="https://ourworldindata.org/extreme-poverty" target="_blank"> Global Extreme Poverty.</a> 
 <br> 
 <br>
 
-<b> Additional charts:</b> 
+<p><b> Additional charts:</b> 
 <br>
 <a href="https://ourworldindata.org/grapher/world-population-in-extreme-poverty-absolute" target="_blank">World population living in extreme poverty</a> 
 <br>
 <a href="https://ourworldindata.org/grapher/total-population-living-in-extreme-poverty-by-world-region" target="_blank">Population living in extreme poverty by region</a>
-<br>
+<br> 
+</p>
 
 <a href="https://ourworldindata.org/grapher/share-multi-poverty" target="_blank">Share of population living in multidimensional poverty</a> 
+</p>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<div class="box-a">
-	 <h2>Target 1.2 
+	 <h2 class="cont-head">Target 1.2 
 	 <br><br>
      Reduce poverty by at least 50%
 	 </h2>
 
 </div>
 
-
+<div class="para">
 <p> SDG INDICATOR 1.2.1 </p>
 
 <p>  Halve population below national poverty line  </p>
@@ -193,11 +196,11 @@ its dimensions according to national definitions.</p>
 
 <br>
 
-<b>More research: </b> 
+<p><b>More research: </b> </p>
 <a href="https://ourworldindata.org/extreme-poverty" target="_blank">Global Extreme Poverty.</a> 
 <br>
 <br>
-<b> Additional charts:</b> 
+<p><b> Additional charts:</b> </p>
 <br>
 <a href="https://ourworldindata.org/grapher/urban-poverty-at-national-poverty-lines" target="_blank">Population living below national poverty line in urban areas</a> 
 
@@ -229,7 +232,7 @@ lack of education, inadequate living standard, lack of income, disempowerment, p
 <b>More research: </b> 
  Further data and research can be found at the Our World in Data entry on
 <a href="https://ourworldindata.org/extreme-poverty" target="_blank">Global Extreme Poverty.</a> 
-
+</div>
 <br>
 <br>
 <br>
@@ -239,14 +242,14 @@ lack of education, inadequate living standard, lack of income, disempowerment, p
 <br>
 <br>
 
-<div class="box-a">
-	<h2>Target 1.3 
+
+	<h2 class="cont-head">Target 1.3 
     <br><br>
     Population covered by social protection floors/systems </h2>
 
 </div>
  
-
+<div class="para">
 <p> SDG INDICATOR 1.3.1</p>
 <p> Population covered by social protection floors/systems </p>
 <br>
@@ -264,6 +267,7 @@ coverage of the poor and the vulnerable.</p>
 <br>
 <a href="https://ourworldindata.org/grapher/adequacy-of-social-safety-net-programs" target="_blank">Adequacy of social safety net programs</a> 
 
+</div>
 <br>
 <br>
 <br>
@@ -273,13 +277,14 @@ coverage of the poor and the vulnerable.</p>
 <br>
 <br>
 
-<div class="box-a">
-	<h2>Target 1.4 
+
+	<h2 class="cont-head">Target 1.4 
 	<br><br>
 	Equal rights to ownership, basic services, technology and economic resources</h2>
 
-</div>
 
+
+<div class="para">
 <p> SDG INDICATOR 1.4.1</p>
 <p>Access to basic services</p>
 
@@ -307,6 +312,7 @@ who perceive their rights to land as secure, by sex and type of tenure.</p>
 <br>
 Goal: By 2030 ensure that all men and women, in particular the poor and the vulnerable, have equal rights to economic resources, as well as access to basic services, 
 ownership and control over land and other forms of property.
+</div>
 <br>
 <br>
 <br>
@@ -317,13 +323,14 @@ ownership and control over land and other forms of property.
 <br>
 <br>
 
-<div class="box-a">
-	<h2>Target 1.5
+
+	<h2 class="cont-head">Target 1.5
     <br><br>
      Build resilience to environmental, economic and social disasters</h2>
 
-</div>
+
  
+<div class="para">
 <p> SDG INDICATOR 1.5.1 </p>
 <p>Deaths and affected persons from natural disasters</p>
 <br>
@@ -358,7 +365,9 @@ vulnerability to climate-related extreme events and other environmental disaster
 <a href="https://ourworldindata.org/grapher/weather-losses-share-gdp" target="_blank">Global weather-related disaster losses as a share of GDP</a> 
 <br>
 <br>
+</div>
 
+<div class="para">
 <p>SDG INDICATOR 1.5.3 </p>
 <p>Disaster risk reduction strategies</p>
 
@@ -370,7 +379,9 @@ for Disaster Risk Reduction 2015–2030.</p>
 
 <p>More research: Further data and research can be found at the Our World in Data entry on
 <a href="https://ourworldindata.org/natural-disasters" target="_blank"> natural catastrophes.</a> 
+
 </p>
+</div>
 <br>
 <br>
 <br>
@@ -381,13 +392,12 @@ for Disaster Risk Reduction 2015–2030.</p>
 <br>
 <br>
 
-<div class="box-a">
-	<h2>Target 1.A
+
+	<h2 class="cont-head">Target 1.A
     <br><br>
      Mobilisation of resources to end poverty </h2>
     
-</div>
-
+<div class="para">
 
 <p>SDG INDICATOR 1.A.1</p>
 <p> Domestic resources to poverty reduction programmes </p>
@@ -408,9 +418,8 @@ There is no defined target level of government spending for this indicator.</p>
 <a href="https://ourworldindata.org/government-spending " target="_blank"> Public Spending. </a> 
 <br>
  <p> Additional charts:
-
-
 <a href="https://ourworldindata.org/grapher/social-spending-oecd-longrun " target="_blank">Social spending</a> 
+ </div>
 <br>
 <br>
 <br>
@@ -421,18 +430,18 @@ There is no defined target level of government spending for this indicator.</p>
 <br>
 <br>
 
-<div class="box-a">
-	<h2>Target 1.B 
+	<h2 class="cont-head">Target 1.B 
     <br><br>
  Pro-poor public spending </h2>
 
-</div>
-
-
+<div class="para">
 <p> SDG INDICATOR 1.B.1 </p>
 <p>Definition: Indicator 1.B.1 is the Pro-poor public social spending. </p>
 <p>Goal: Create sound policy frameworks at the national, regional and international levels, based on pro-poor and gender-sensitive development strategies,
  to support accelerated investment in poverty eradication actions.</p>
+</div>
+
+
  <br>
  <br>
  <br>
