--- a/action.html
+++ b/action.html
@@ -86,7 +86,7 @@
 
 <br>
    <!--intro paragraph-->
-
+ <div class="para">
 	<p>  The fight against global poverty can be a discouraging one. The number of people suffering is hard to imagine.
 		While there is a multitude of poverty-stricken individuals, things are not entirely bleak.Poverty rates have been raising in recent years
 		because of the pandemic and many other reasons. 
@@ -99,9 +99,11 @@
 		move the needle on poverty, expand the middle class, and put the economy on an upward trajectory.
 		Work is a major route for many to escape poverty. However, working alone does not guarantee this, particularly if working conditions are not decent. 
 		In 2019, more than 630 million workers worldwide — almost one in five of all those employed — did not earn enough to lift themselves and their 
-		families out of extreme or moderate poverty. </p>
+		families out of extreme or moderate poverty. 
+    
+  </p>
 
- 
+ <hr>
 
       <br>
 
@@ -109,7 +111,8 @@
   <p> The UN has defined 7 Targets and 14 Indicators for SDG 1 ,Poverty. Targets specify the goals and Indicators represent the metrics by which the world aims
       to track whether these Targets are achieved. Below we quote the original text of all Targets. The targets were adopted by the United Nations in 2015 as a
 	  universal call to action to end poverty,  and ensure that by 2030 all people enjoy development and prosperity.
- </p>
+  </div>
+  </p>
 
 <br>
 <br>
@@ -124,18 +127,17 @@
 <br>
 <br>
 <br>
+<br>
 
-
-	
+	<hr>
 
 		<h2 class="cont-head">Target 1.1  
-			<br><br>
+			<br>
 		  Eradicate extreme poverty </h2>
 
- 
-
-
-
+ <br>
+ <br>
+ <br>
 <div class="para">
 <p> SDG INDICATOR 1.1.1 </p>
 
@@ -175,13 +177,15 @@ This poverty line is measured in "international dollars" which are a hypothetica
 <br>
 <br>
 
-
+<hr>
 	 <h2 class="cont-head">Target 1.2 
-	 <br><br>
+	 <br>
      Reduce poverty by at least 50%
 	 </h2>
 
-</div>
+<br>
+<br>
+<br>
 
 <div class="para">
 <p> SDG INDICATOR 1.2.1 </p>
@@ -242,12 +246,15 @@ lack of education, inadequate living standard, lack of income, disempowerment, p
 <br>
 <br>
 
+<hr>
 
 	<h2 class="cont-head">Target 1.3 
-    <br><br>
+    <br>
     Population covered by social protection floors/systems </h2>
 
-</div>
+<br>
+<br>
+<br>
  
 <div class="para">
 <p> SDG INDICATOR 1.3.1</p>
@@ -277,13 +284,15 @@ coverage of the poor and the vulnerable.</p>
 <br>
 <br>
 
+<hr>
 
 	<h2 class="cont-head">Target 1.4 
-	<br><br>
+	<br>
 	Equal rights to ownership, basic services, technology and economic resources</h2>
 
-
-
+<br>
+<br>
+<br>
 <div class="para">
 <p> SDG INDICATOR 1.4.1</p>
 <p>Access to basic services</p>
@@ -322,13 +331,15 @@ ownership and control over land and other forms of property.
 <br>
 <br>
 <br>
-
+<hr>
 
 	<h2 class="cont-head">Target 1.5
-    <br><br>
+    <br>
      Build resilience to environmental, economic and social disasters</h2>
 
-
+     <br>
+     <br>
+     <br>
  
 <div class="para">
 <p> SDG INDICATOR 1.5.1 </p>
@@ -392,11 +403,13 @@ for Disaster Risk Reduction 2015–2030.</p>
 <br>
 <br>
 
-
+<hr>
 	<h2 class="cont-head">Target 1.A
-    <br><br>
+    <br>
      Mobilisation of resources to end poverty </h2>
-    
+     <br>
+     <br>
+     <br> 
 <div class="para">
 
 <p>SDG INDICATOR 1.A.1</p>
@@ -430,10 +443,13 @@ There is no defined target level of government spending for this indicator.</p>
 <br>
 <br>
 
-	<h2 class="cont-head">Target 1.B 
-    <br><br>
+<hr>
+	<h2 class="cont-head">Target 1.B
+    <br>
  Pro-poor public spending </h2>
-
+ <br>
+ <br>
+ <br>
 <div class="para">
 <p> SDG INDICATOR 1.B.1 </p>
 <p>Definition: Indicator 1.B.1 is the Pro-poor public social spending. </p>
