Added  smooth  scrolling code into head section

--- a/contribution.html
+++ b/contribution.html
@@ -4,6 +4,7 @@
       <style>
         html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *, *:before, *:after {
@@ -12,7 +13,7 @@
 
 .column {
   float: left;
-  width: 30.0%;
+  width: 32.0%;
   margin-bottom: 16px;
   padding: 0 8px;
 }
@@ -63,6 +64,19 @@
   p {
   font-size: 14px;
   }
+
+  #section1 {
+
+
+}
+
+#section2 {
+
+}
+#section3{
+
+}
+
 </style>
         <body>
           <div class="row">
