--- a/contribution.html
+++ b/contribution.html
@@ -172,26 +172,19 @@
                This endeavor is in addition to DuPont's ongoing efforts to improve the lives of hundreds of millions of farmers.</p>
 
                <h2>MasterCard</h2>
-               <p>Through 500 programs in more than 50 countries, MasterCard, 
-                in collaboration with financial institutions, merchants, telecommunications companies, 
-                governments, and non-governmental organizations, has helped make the financial system 
-                more accessible to more than 300 million people who were previously excluded. And it's only the beginning for them.
-                 By 2020, they plan to connect 500 million individuals to the formal economy, including 40 million micro and small businesses, 
-                 offering people a crucial tool to assist them escape poverty.</p>
+               <p>Over 300 million people now have access to the financial system thanks to MasterCard.
+                  They hope to connect 500 million people to the formal economy by 2020. 
+                  As part of this project, 40 million micro and small enterprises will be connected to the MasterCard network by 2020.</p>
 
-                 <p>MasterCard is collaborating with nations such as Nigeria and Egypt to link a government identity with payments, 
-                  allowing people to become financially engaged on a large scale.</p>
+                 <p>MasterCard, the world's largest credit card network,
+                    is assisting consumers in underdeveloped countries in becoming more financially active. 
+                    It also aids in the distribution of government benefits through the use of electronic payment cards.</p>
 
-                  <p>MasterCard also collaborates with governments to assist in the distribution of social benefits via electronic payment cards. 
-                    For example, the business collaborated with the South African Social Security Agency to distribute government monies on 10 million biometric debit cards.
-                    For the first time, five million of the 16 million South Africans receiving government handouts have access to a legitimate financial tool.</p>
-                  
-                  <p>The company has also collaborated with the Rwandan government to expedite the country's transition to financial inclusion for 90% of its inhabitants.
-                    MasterCard collaborated with the International Finance Corporation (IFC), a World Bank Group member, 
-                    to expand the use of electronic payments by micro, small, and medium businesses. 
-                    MasterCard has launched Masterpass QR in eight countries, a solution that allows millions of SMEs to accept rapid and secure payments 
-                    while also empowering consumers to buy goods and services without using cash. In addition, the company collaborated with bKash to enable 
-                    Bangladeshis to send and receive remittances using mobile phones.</p>  
+              
+                  <p>Masterpass QR, a solution that allows millions of SMEs to accept fast and secure payments,
+                     has been launched in eight countries by MasterCard. 
+                     Bangladeshis can now send and receive remittances via their mobile phones thanks to a partnership between the company and bKash. 
+                     It also collaborated with Rwanda's government to help the country move closer to financial inclusion.</p>  
 
                     <h2>QUALCOMM</h2>
                     <p>Qualcomm supports to the Fishing with Mobile Nets project in Colombia, 
