--- a/aboutus.html
+++ b/aboutus.html
@@ -21,17 +21,12 @@
 
 <body>
 
-    <h1>OUR VISION</h1>
+    <h1>What we believe</h1>
 
-    <p> <b>1st goal</b> of the 17 Sustainable Development Goals adopted by the United Nations in <b>2015</b>,
-        Sustainable Development Goal 1(SDG 1 or Global Goal 1), advocates for the abolition of all forms of poverty.
-        <b>"No Poverty"</b> is the officialphrase. Member countries have vowed to <b>"Leave No One Behind"</b>,
-        with the purpose of <b>"leaving no one behind and reaching those who are furthest behind first."</b> 
-        SDG 1 aspires to eliminate all forms of severe poverty, such as hunger, lack of safe drinking water, 
-        and sanitary conditions. Findinganswers to new challenges posed by climate change and conflict are 
-        all part of achieving this aim.
-        <br><br><b><h3><i> SDG 1 focuses not just on poor individuals,but also on the services they rely on
-        and the social policies that either create or avoid poverty.</b></h3></i>
+    <p> Our vision is for a just and sustainable world. We are pursuing on achieving the goal <b>‘No Poverty’</b> 
+        to build a world where people and the environment are at the heart of just economies. A world free of 
+        gender-based violence and discrimination for women and girls. When the climate crisis is contained and
+        inclusive and accountable governance structures are in place, those in positions of power can be held accountable.
     </p>
 
 </body>
