--- a/aboutus.html
+++ b/aboutus.html
@@ -26,8 +26,17 @@
     <p> Our vision is for a just and sustainable world. We are pursuing on achieving the goal <b>‘No Poverty’</b> 
         to build a world where people and the environment are at the heart of just economies. A world free of 
         gender-based violence and discrimination for women and girls. When the climate crisis is contained and
-        inclusive and accountable governance structures are in place, those in positions of power can be held accountable.
-    </p>
+        inclusive and accountable governance structures are in place, those in positions of power can be held accountable.</p>
+
+    <h1>More about us and what we do</h1>
+
+    <p> We started our organization in 2017 based on the 1st SDG goal of the 17 SDG goals adopted by the United Nations in 2015.
+        We are currently working on achieving the goal by donating and volunteering and we’re focusing not only one area, 
+        we’re planning on targeting countries worldwide. We work with thousands of partners and allies across 70 countries 
+        to help communities develop better lives for themselves, build resilience, and protect lives and livelihoods even 
+        in times of catastrophe. We combat inequities that keep people trapped in poverty and injustice - and work for meaningful, 
+        long-term change - because we seek long-term answers.</p>
+    
 
 </body>
 </html>
