--- a/contribution.html
+++ b/contribution.html
@@ -1,5 +1,15 @@
 <html>
     <head>
+
+      <link rel="icon" href="images/icon.png" type="image/gif" size="16x16">
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="slideshow.css">
+      <link rel="stylesheet" href="navbar.css">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <link rel="stylesheet" href="donations.css">
+      <link rel="stylesheet" href="footer.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
         html {
